force-app/main/default/objects/Answer__c/fields/Answers__c.field-meta.xml
<CustomField>
    <fullName>Answers__c</fullName>
    <label>Answers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>