force-app/main/default/objects/Answer__c/fields/QuestionExternalId__c.field-meta.xml
<CustomField>
    <fullName>QuestionExternalId__c</fullName>
    <label>Question External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>