force-app/main/default/objects/Answer__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Text</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>