force-app/main/default/objects/Answer__c/listViews/All_answers.listView-meta.xml
<ListView>
    <fullName>All_answers</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Text__c</columns>
    <columns>IsCorrect__c</columns>
    <filterScope>Mine</filterScope>
    <label>All answers</label>
</ListView>